--- a/api.html
+++ b/api.html
@@ -7,7 +7,7 @@ layout: api
 </nav>
 
 <section id='content'>
-{% for post in site.posts %}
+{% for post in site.posts reversed %}
   <article class='{{ post.type }}'>
     <a name='{{ post.url }}' href='#{{ post.url }}'><h2>{% if post.type %}<code><b>{{ post.type }}</b> {{ post.path }}</code> {% endif %}{{ post.title }}</h2></a>
     <section class='body'>
