--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@ layout: api
 ---
 
 <nav id='sidebar'>
-	{% include api_nav.html %}
+	{% include nav.html %}
 </nav>
 
 <section id='content'>
-  {% assign api_cats = "api localizations locales uuid" | split: ' ' %}
+  {% assign api_cats = "api Localizations Locales UUID" | split: ' ' %}
   {% for post in site.posts reversed %}
-  {% if api_cats contains post.category %}
+  {% unless api_cats contains post.category %}
   <article class='{{ post.type }}'>
     <a name='{{ post.url }}' href='#{{ post.url }}'><h2>{% if post.type %}<code><b>{{ post.type }}</b> {{ post.path }}</code> {% endif %}{{ post.title }}</h2></a>
     <section class='body'>
       {{ post.content }}
     </section>
   </article>
-  {% endif %}
+  {% endunless %}
 {% endfor %}
 </section>
